# Repo-Cliente-XMPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.ui
src/: addchat.cpp  addchat.h  addcontact.cpp  addcontact.h  mainwindow.cpp  mainwindow.h  signon.cpp  signon.h  xmppworker.cpp  xmppworker.h
ui/: addchat_dialog.ui  addcontact_dialog.ui  mainwindow.ui  signon_dialog.ui
